align ment and shape fixes

--- a/src/assets/styles/contact-form.scss
+++ b/src/assets/styles/contact-form.scss
@@ -116,7 +116,8 @@
   }
 
   &.build-topic {
-    min-height: 300px;
+    min-height: 285px;
+    margin-top: 0
   }
 }
 
@@ -198,7 +199,6 @@
 }
 
 .checkbox {
-  @include fontstyle(1.25em, 300, 1.6);
   position: absolute;
 
   input {
@@ -220,9 +220,8 @@
   }
 
   label {
+    @include fontstyle(1.25em, 300, 1);
     font-family: $gtAmericaLT;
-    font-size: 1.25em;
-    line-height: 1;
     @extend %flex;
     width: 100%;
     height: 100%;
@@ -312,6 +311,7 @@
     @include checkbox-svg(4.8em, 3.5em, 83.48%, 55%);
   }
 }
+
 
 .radio-group {
   @extend %flex;
@@ -459,10 +459,10 @@
 @media screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (orientation: portrait) {
   .fullscreen {
     .contact-form-section {
-      transform: scale(3);
+      transform: scale(3.5);
 
       .cnt-input__inner {
-        top: 46%;
+        top: 49%;
         left: 46%;
       }
     }
@@ -480,8 +480,9 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .fullscreen {
     .contact-form-section {
+      transform: scale(3);
       .cnt-input__inner {
-        top: 45%;
+        top: 49%;
         left: 45%;
       }
     }
@@ -495,6 +496,7 @@
       padding-right: 24px;
     }
   }
+
 }
 
 @media(max-width: $mobile) {
@@ -577,6 +579,10 @@
       }
     }
 
+    .form-input {
+      max-width: 100%;
+    }
+
     .header {
       position: relative;
       .container {
@@ -622,10 +628,6 @@
     position: relative;
     left: 0;
     top: 0;
-
-    label {
-      font-size: 1.25em !important;
-    }
 
     svg, br{
       display: none;
@@ -684,7 +686,6 @@
       .radio {
         width: 130px;
         height: 80px;
-        font-size: 1.25em;
       }
     }
 
